# qwen-dev-tutor-it

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.it.md  README.md  README.zh-cn.md  SECURITY.md  TEST_REPORT.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml
config/: models.example.yaml
examples/: simple_function.py
exercises/: 01_text_chat.md  02_code_explanation.md  03_model_comparison.md  04_vision.md  04_vision_placeholder.md  05_audio.md  05_audio_placeholder.md  06_agentic_workflow.md  06_agentic_workflow_placeholder.md  demo.sh
src/qwen_dev_tutor/: __init__.py  api.py  cli.py  client.py  config.py  models.py  prompts.py  tutor.py
tests/: conftest.py  test_api.py  test_cli.py  test_client.py  test_config.py  test_models.py  test_prompts.py  test_tutor.py
