[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwen-dev-tutor-it"
version = "0.1.0b1"
description = "MVP open-source per testare Qwen in scenari di developer education."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Dario" }
]
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "pyyaml>=6.0,<7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.11.0,<1.0.0"
]

[project.scripts]
qwen-dev-tutor = "qwen_dev_tutor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_dev_tutor"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "YTT"]
ignore = ["E501"]
